--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
+    "@types/three": "^0.182.0",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
-    "ogl": "^1.0.11"
+    "ogl": "^1.0.11",
+    "three": "^0.182.0"
   }
 }
