--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "rewrites": [
+    { "source": "/recollect2026", "destination": "/index.html" },
+    { "source": "/recollect2026/", "destination": "/index.html" },
+    { "source": "/recollect2026/:path*", "destination": "/:path*" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
